--- a/style.css
+++ b/style.css
@@ -38,9 +38,11 @@ h1 {
 
 .BoxContainer {
     width: 100%;
+    height: 100vh;
+    border: 2px solid red;
     flex-direction: column;
     justify-content: center;
-    gap: 10px;
+    gap: 30px;
     padding: 10px;
 }
 
